Ajustes simples para melhorar responsividade no celular

--- a/estilo.css
+++ b/estilo.css
@@ -1,6 +1,8 @@
 /* Estilo da Página */  
 body {
   background-color: #f2f2f2;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 /* Titulos */
@@ -25,6 +27,10 @@ ul li {
 /* Imagens */
 .criminal {
   border-radius: 12px;
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
 }
 
 /* Tabelas */
